# mail

./: .travis.yml  Cargo.toml
core/: Cargo.toml
core/src/: mail.rs
headers/: Cargo.toml
headers/src/header_components/: date_time.rs  disposition.rs
internals/: Cargo.toml
mail/: Cargo.toml  README.md
parser/: Cargo.toml
parser/src/: addrparse.rs  body.rs  dateparse.rs  error.rs  header.rs  lib.rs  parser.rs  util.rs
smtp/: Cargo.toml
template/: Cargo.toml
