[package]
name         = "mail-parser"
version      = "0.6.11"
description  = "[mail-parser] parser for the Mail type"
authors      = ["Matthias Beyer <mail@beyermatthias.de>"]

license      = "MIT OR Apache-2.0"
readme       = "./README.md"
repository   = "https://github.com/dac-gmbh/mail"
edition      = "2018"

categories   = []
keywords     = ["mail", "rfc5322", "mime", "smtp", "template"]
autoexamples = true


[dependencies]
mail-core      = { version = "0.6.2", features = ["serde-impl"] }
mail-headers   = { version = "0.6.6", features = ["serde-impl"] }
mail-internals = "0.2.3"

failure          = "0.1"
vec1             = { version = "1.3.0", features = ["serde"]}
serde            = { version = "1", features     = ["derive"] }
toml             = "0.4"
base64           = "0.11"
quoted_printable = "0.4"
charset          = "0.1"

