[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-smtp"
version = "0.2.2"
categories = []
description = "[mail/smtp] combines mail-core with new-tokio-smtp"
documentation = "https://docs.rs/mail-smtp"
keywords = ["mail-api"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail-smtp"

[dependencies]
mail-core      = { version = "0.6.2", path = "../core" }
mail-headers   = { version = "0.6.6", path = "../headers" }
mail-internals = { version = "0.2.3", path = "../internals" }

futures = "0.1"
failure = "0.1.5"
new-tokio-smtp = "0.8.1"

[features]
test-with-traceing = ["mail-internals/traceing"]
extended-api = []


[dev-dependencies]
mail-core = { version="0.6.0", path = "../core", features=["test-utils"] }
